--- a/Miyu/Feature/Homepage/HomepageCell/HomepageTableViewCell.xib
+++ b/Miyu/Feature/Homepage/HomepageCell/HomepageTableViewCell.xib
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -41,22 +42,22 @@
                         </constraints>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="xqg-D0-BRD" userLabel="Caption Photo">
-                        <rect key="frame" x="46" y="128" width="493" height="312.5"/>
+                        <rect key="frame" x="46" y="128" width="493" height="300.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Picture description and other good stuff caption stuff and stuff here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUD-j2-8Nf">
-                                <rect key="frame" x="0.0" y="0.0" width="493" height="32.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="493" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dog" translatesAutoresizingMaskIntoConstraints="NO" id="JSI-uK-gow">
-                                <rect key="frame" x="0.0" y="32.5" width="493" height="259.5"/>
+                                <rect key="frame" x="0.0" y="20.5" width="493" height="260"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="JSI-uK-gow" secondAttribute="height" multiplier="112:59" id="LPO-5K-Xnz"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* 1000 people rated this" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZH-B9-b1W">
-                                <rect key="frame" x="0.0" y="292" width="184" height="20.5"/>
+                                <rect key="frame" x="0.0" y="280.5" width="184" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -64,7 +65,7 @@
                         </subviews>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="eJm-zm-8pP" userLabel="Comments">
-                        <rect key="frame" x="46" y="470.5" width="493" height="20.5"/>
+                        <rect key="frame" x="46" y="458.5" width="493" height="20.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Comments(25)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JcK-cd-6Bg">
                                 <rect key="frame" x="0.0" y="0.0" width="343.5" height="20.5"/>
@@ -89,7 +90,7 @@
                         </constraints>
                     </imageView>
                     <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="rC0-b4-6Qh" customClass="CosmosView" customModule="Cosmos">
-                        <rect key="frame" x="59" y="541" width="470" height="90"/>
+                        <rect key="frame" x="59" y="529" width="470" height="102"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
@@ -118,6 +119,7 @@
                 </subviews>
                 <color key="backgroundColor" red="1" green="0.64352128936375197" blue="0.57676956476521068" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
+                    <constraint firstItem="rC0-b4-6Qh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="529" id="3iS-ub-ZdW"/>
                     <constraint firstItem="xqg-D0-BRD" firstAttribute="top" secondItem="rcd-P5-2X9" secondAttribute="bottom" constant="19" id="3n8-eh-RdN"/>
                     <constraint firstItem="rC0-b4-6Qh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="59" id="AfE-dF-21C"/>
                     <constraint firstItem="eJm-zm-8pP" firstAttribute="top" secondItem="xqg-D0-BRD" secondAttribute="bottom" constant="30" id="Biz-yU-WjJ"/>
@@ -129,6 +131,7 @@
                     <constraint firstItem="eJm-zm-8pP" firstAttribute="leading" secondItem="xqg-D0-BRD" secondAttribute="leading" id="MM1-NW-fiw"/>
                     <constraint firstItem="rcd-P5-2X9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Mv7-Dj-RfB"/>
                     <constraint firstItem="rcd-P5-2X9" firstAttribute="leading" secondItem="xqg-D0-BRD" secondAttribute="leading" id="Q6i-gH-2Mb"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="rC0-b4-6Qh" secondAttribute="trailing" constant="36" id="Qof-h5-bh1"/>
                     <constraint firstItem="z8Z-b0-MUw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="X9N-BX-uaB"/>
                     <constraint firstItem="rcd-P5-2X9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="46" id="kBi-lU-etG"/>
                     <constraint firstItem="xqg-D0-BRD" firstAttribute="top" secondItem="z8Z-b0-MUw" secondAttribute="bottom" constant="72" id="sDC-ei-A3l"/>
