--- a/Miyu/MainTab.storyboard
+++ b/Miyu/MainTab.storyboard
@@ -15,12 +15,15 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="vwB-rI-hIq" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Qq5-2I-0zg">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="OCc-RS-LNt" kind="relationship" relationship="viewControllers" id="C6n-I7-Uf5"/>
                         <segue destination="hQP-Bm-EMY" kind="relationship" relationship="viewControllers" id="kiU-VK-TY7"/>
+                        <segue destination="WLZ-JZ-7hx" kind="relationship" relationship="viewControllers" id="eZs-sl-2ax"/>
+                        <segue destination="ntb-QB-yWQ" kind="relationship" relationship="viewControllers" id="4TM-vD-vs5"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9iA-zI-m8A" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -35,7 +38,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LBG-Qo-Wtq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="302" y="116"/>
+            <point key="canvasLocation" x="282" y="21"/>
         </scene>
         <!--HomepageViewController-->
         <scene sceneID="1cq-6j-WhQ">
@@ -46,6 +49,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SJv-Mp-Mih" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="303" y="-35"/>
+        </scene>
+        <!--UploadViewController-->
+        <scene sceneID="5e3-qe-EnT">
+            <objects>
+                <viewControllerPlaceholder storyboardName="UploadViewController" id="WLZ-JZ-7hx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Rtd-S7-BcZ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="se7-0e-EyJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="284" y="81"/>
+        </scene>
+        <!--ExploreViewController-->
+        <scene sceneID="W20-WP-jbQ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ExploreViewController" id="ntb-QB-yWQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Yjw-7Q-liO"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Buw-8l-PdW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="278" y="137"/>
         </scene>
     </scenes>
 </document>
